03_code2/grade.txt
Grading at Thu Oct  1 17:37:32 UTC 2020
Checking code2.c for legal syntax
temp.c: In function ‘printTriangle’:
temp.c:6:3: error: ‘starCount’ undeclared (first use in this function)
   starCount =0;
   ^
temp.c:6:3: note: each undeclared identifier is reported only once for each function it appears in
temp.c: In function ‘main’:
temp.c:40:3: error: expected ‘;’ before ‘return’
   return 0;
   ^
temp.c: In function ‘printTriangle’:
temp.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not have legal syntax!

Overall Grade: F
